--- a/public/timeline.html
+++ b/public/timeline.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Employee Timeline</title>
     <meta charset="utf-8">
   </head>
   <body>
@@ -13,6 +14,10 @@
     <div id='timeline-embed' style="width: 100%; height: 600px"></div>
 
     <script src="https://unpkg.com/whatwg-fetch@1.0.0/fetch.js"></script>
+    <script src="https://unpkg.com/color-hash@1.0.3/dist/color-hash.js"></script>
     <script src="timeline.js"></script>
+    <style>
+      .tl-timegroup .tl-timegroup-message { color: black; font-weight: bolder; }
+    </style>
   </body>
 </html>
