--- a/public/leaflet.html
+++ b/public/leaflet.html
@@ -10,8 +10,9 @@
     <script src="https://unpkg.com/leaflet.markercluster@1.0.0-rc.1.0/dist/leaflet.markercluster-src.js"></script>
 
     <style>
-      #map{ width: 900px; height: 500px; }
-      #legend { position: absolute; right: 0; top: 0; }
+      body { padding: 0; margin: 0; }
+      html, body, #map { height: 100%; width: 100%; }
+      #legend { position: absolute; right: 0; top: 0; background: white; z-index: 9999 }
       #saucers { list-style: none; padding: 0; text-align: right; padding-right: 2em; }
     </style>
   </head>
